# library

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.test  description.md  docker-compose.yml  pyproject.toml  readme.md
alembic/: env.py
alembic/versions/: 092cb88347a9_change_to_singular.py  2b10280ac8b1_fix_back_populates.py  3eb7ddd46aec_add_orders.py  5260213c30d9_fix.py  59c282bad33f_comment_order_in_user.py  7692d42d37eb_initial_migration.py  8595f25dcd10_fix_columns_names.py  92e80a5cf3ff_pluar_books.py  9da6871d2809_add_new_models.py  9dd258fae6b5_move_models.py  a22ed811c661_change_to_singular.py  bbb0fc85a316_rename_secondary.py  f645bd41bac7_rename_secondary.py
database/: database.py  models.py
message_broker/: consumer.py  publisher.py
notifications/: send_notification.py
scheduler/: scheduler.py
source_code/: app.py  config.py  database.py  dependencies.py  models.py  schemas.py
source_code/api/: authors.py  books.py  categories.py  orders.py  publishers.py  queue.py  users.py
tests/: conftest.py
tests/api_tests/: test_user.py
