[tool.poetry]
name = "projektbiblioteka"
version = "0.1.0"
description = ""
authors = ["domittaa <klodzinska.d@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
