[tool.poetry]
name = "library"
version = "0.1.0"
description = ""
authors = ["domittaa <klodzinska.d@gmail.com>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
sqlalchemy = "^2.0.27"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pydantic-settings = "^2.2.0"
isort = "^5.13.2"
pre-commit = "^3.6.2"
aio-pika = "^9.4.0"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
line_length = 120

[tool.black]
line_length = 120
